# nanoGPT-rs

./: Cargo.toml  README.md  config.toml
src/: config.rs  data.rs  inference.rs  inits.rs  main.rs  model.rs  ops.rs  train.rs
src/data/: batcher.rs  dataset.rs  mod.rs  tokenizer.rs
