[package]
name = "nanogpt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.15.0", features = [
    "train",
    "wgpu",
    "accelerate",
    "autotune",
    "openblas-system",
    "openblas",
    "fusion",
] }
tokenizers = { version = "0.20.0", features = ["hf-hub", "http"] }
rand = "0.8.5"
rand_distr = "0.4.3"
random = "0.14.0"
rayon = "1.10.0"
serde = { version = "1.0.208", features = ["derive"] }
toml = "0.8.19"
log = "0.4.22"
derive-new = "0.7.0"
anyhow = "1.0.92"
serde_json = "1.0.132"
clap = { version = "4.5.21", features = ["derive"] }

[profile.dev]
panic = "unwind"
incremental = true
overflow-checks = true

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
