[package]
name = "nanogpt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.17.0", features = [
    "train",
    "cuda",
    "accelerate",
    "autotune",
    "openblas-system",
    "openblas",
    "fusion",
    "sqlite",
] }
tokenizers = { version = "0.21.1", features = ["hf-hub", "http"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.20"
log = "0.4.27"
derive-new = "0.7.0"
serde_json = "1.0.140"
pretty_env_logger = "0.5.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", features = ["background_threads"] }

[dev-dependencies]
quickcheck = "1.0.3"

[profile.dev]
panic = "unwind"
incremental = true
overflow-checks = true

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
